# tree-sitter-yaral

./: Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: update.yaml
bindings/c/: tree-sitter-yaral.h  tree-sitter-yaral.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yaral/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterYaralTests/: TreeSitterYaralTests.swift
parser.dylib.dSYM/Contents/Resources/Relocations/aarch64/: parser.dylib.yml
src/: grammar.json  node-types.json  parser.c  scanner.c
