[package]
name = "tree-sitter-yaral"
description = "Yaral grammar for tree-sitter"
version = "0.1.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yaral"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/MXfive/tree-sitter-yaral"
authors = ["Martyn Cross <martyn@cross.gg>"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"
